# column79-rs

./: .gitignore  .hgignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  deny.toml  rustfmt.toml  tc 1.91.0 (f8297e351 2025-10-28)
.githooks/: pre-commit  run_cargo.sh
.github/workflows/: ci-rust.yml
src/: ask.rs  config.rs  error.rs  flags.rs  inspector.rs  language.rs  lib.rs  line_type.rs
src/column79/: error.rs  main.rs
src/config/: default.toml  user.toml
