# -*- mode:toml; coding:utf-8-unix; -*-
# =============================================================================
[package]
edition                 = "2021"
name                    = "column79"
version                 = "0.2.10-alpha.5"
authors                 = ["hanepjiv <hanepjiv@gmail.com>"]
license                 = "MIT OR Apache-2.0"
keywords                = ["tool", "development"]
description             = "Source code column checker."
readme                  = "README.md"
documentation           = "https://github.com/hanepjiv/column79-rs/wiki"
homepage                = "https://github.com/hanepjiv/column79-rs"
repository              = "https://github.com/hanepjiv/column79-rs.git"
publish                 = false
# =============================================================================
[profile.release]
strip                   = true
lto                     = true
# =============================================================================
[dependencies]
bitflags                = { default-features = false, version = "^2" }
env_logger              = { default-features = false, version = "^0.11" }
getopts                 = { default-features = false, version = "^0.2" }
log                     = { default-features = false, version = "^0.4" }
regex                   = { default-features = true, version = "^1" }
serde                   = { default-features = false, version = "^1" }
serde_derive            = { default-features = false, version = "^1" }
tempfile                = { default-features = false, version = "^3" }
dirs                    = { default-features = false, version = "^5" }
# -----------------------------------------------------------------------------
[dependencies.toml]
default-features        = false
version                 = "^0.8"
features                = ["parse"]